java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
  labels: 
    app: java
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java
  template:
    metadata:
      labels:
        app: java
    spec:
      containers:
        - image: abhishekchoudharydev/learndocker
          name: learndocker
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
