nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  selector:
    app: java
  type: NodePort
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 8080  
      nodePort: 30008
